examples/invalid/division_by_zero.mini
# Ошибка: символ / не поддерживается языком
10/0
